RESOLVED FIXED277946
[Debug] `fast/multicol/crash-in-vertical-writing-mode.html` is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=277946
Summary [Debug] `fast/multicol/crash-in-vertical-writing-mode.html` is a constant crash
Vitaly Dyackhov
Reported 2024-08-12 04:33:54 PDT
``` STDERR: ASSERTION FAILED: !m_fragmentsInvalidated STDERR: /home/vitaly/WebKit/Source/WebCore/rendering/RenderFragmentedFlow.cpp(279) : virtual WebCore::RenderFragmentContainer* WebCore::RenderFragmentedFlow::fragmentAtBlockOffset(const WebCore::RenderBox*, WebCore::LayoutUnit, bool) const STDERR: 1 0x7fa1d02c7367 WebCore::RenderFragmentedFlow::fragmentAtBlockOffset(WebCore::RenderBox const*, WebCore::LayoutUnit, bool) const STDERR: 2 0x7fa1d03afc7c WebCore::RenderMultiColumnFlow::fragmentAtBlockOffset(WebCore::RenderBox const*, WebCore::LayoutUnit, bool) const STDERR: 3 0x7fa1d03afba6 WebCore::RenderMultiColumnFlow::updateMinimumPageHeight(WebCore::RenderBlock const*, WebCore::LayoutUnit, WebCore::LayoutUnit) STDERR: 4 0x7fa1d02030c8 WebCore::RenderBlockFlow::updateMinimumPageHeight(WebCore::LayoutUnit, WebCore::LayoutUnit) STDERR: 5 0x7fa1d0201d79 WebCore::RenderBlockFlow::computeLineAdjustmentForPagination(WebCore::InlineIterator::LineBoxIterator const&, WebCore::LayoutUnit, WebCore::LayoutUnit) STDERR: 6 0x7fa1cf369e8d WebCore::LayoutIntegration::computeAdjustmentsForPagination(WebCore::LayoutIntegration::InlineContent const&, WebCore::Layout::PlacedFloats const&, bool, WebCore::Layout::BlockLayoutState const&, WebCore::RenderBlockFlow&) STDERR: 7 0x7fa1cf36706d WebCore::LayoutIntegration::LineLayout::adjustContentForPagination(WebCore::Layout::BlockLayoutState const&, bool) STDERR: 8 0x7fa1cf3643d1 WebCore::LayoutIntegration::LineLayout::layout() STDERR: 9 0x7fa1d020de7d WebCore::RenderBlockFlow::layoutModernLines(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) STDERR: 10 0x7fa1d01fd61e WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) STDERR: 11 0x7fa1d01fc838 WebCore::RenderBlockFlow::layoutInFlowChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) STDERR: 12 0x7fa1d01faf9a WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) STDERR: 13 0x7fa1d01e6ed2 WebCore::RenderBlock::layout() STDERR: 14 0x7fa1d029c216 WebCore::RenderElement::layoutIfNeeded() STDERR: 15 0x7fa1d03e85a8 WebCore::RenderTable::layoutCaption(WebCore::RenderTableCaption&) STDERR: 16 0x7fa1d03e8805 WebCore::RenderTable::layoutCaptions(WebCore::RenderTable::BottomCaptionLayoutPhase) STDERR: 17 0x7fa1d03e92dd WebCore::RenderTable::layout() STDERR: 18 0x7fa1d029c216 WebCore::RenderElement::layoutIfNeeded() STDERR: 19 0x7fa1d02d6852 WebCore::RenderGrid::performPreLayoutForGridItems(WebCore::GridTrackSizingAlgorithm const&, WebCore::RenderGrid::ShouldUpdateGridAreaLogicalSize) const STDERR: 20 0x7fa1d02d4082 WebCore::RenderGrid::computeIntrinsicLogicalWidths(WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 21 0x7fa1d01f124e WebCore::RenderBlock::computePreferredLogicalWidths() STDERR: 22 0x7fa1d02176f4 WebCore::RenderBox::minPreferredLogicalWidth() const STDERR: 23 0x7fa1d01f1afd WebCore::RenderBlock::computeChildIntrinsicLogicalWidths(WebCore::RenderObject&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 24 0x7fa1d01f1e05 WebCore::RenderBlock::computeChildPreferredLogicalWidths(WebCore::RenderObject&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 25 0x7fa1d01f1714 WebCore::RenderBlock::computeBlockPreferredLogicalWidths(WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 26 0x7fa1d01f9fdb WebCore::RenderBlockFlow::computeIntrinsicLogicalWidths(WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 27 0x7fa1d01f124e WebCore::RenderBlock::computePreferredLogicalWidths() STDERR: 28 0x7fa1d02176f4 WebCore::RenderBox::minPreferredLogicalWidth() const STDERR: 29 0x7fa1d01f1afd WebCore::RenderBlock::computeChildIntrinsicLogicalWidths(WebCore::RenderObject&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 30 0x7fa1d01f1e05 WebCore::RenderBlock::computeChildPreferredLogicalWidths(WebCore::RenderObject&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) const STDERR: 31 0x7fa1d01f1714 WebCore::RenderBlock::computeBlockPreferredLogicalWidths(WebCore::LayoutUnit&, WebCore::LayoutUnit&) const ```
Attachments
Vitaly Dyackhov
Comment 1 2024-08-12 04:54:25 PDT
EWS
Comment 2 2024-08-12 12:01:18 PDT
Committed 282127@main (243516e30c68): <https://commits.webkit.org/282127@main> Reviewed commits have been landed. Closing PR #32033 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-12 12:02:15 PDT
Note You need to log in before you can comment on or make changes to this bug.